# datalfred

./: .gitignore  .gitlab-ci.yml  README.md
code/: Dockerfile  pyproject.toml
code/chatbot/: lambda_entrypoint.py  main_agent.py  slack.py
code/chatbot/sub_agents/: data_analyst.py  run_guy.py
code/chatbot_failsafe/: main.py
iac/: .terraform.lock.hcl  athena_workgroup.tf  bedrock_inference_profile.tf  data.tf  lambda_chatbot.tf  lambda_chatbot_failsafe.tf  locals.tf  outputs.tf  s3.tf  terraform.tf  variables.tf
