[tool.poetry]
name = "chatbot"
version = "0.1.1"
description = ""
authors = ["Erwan Simon <erwan.simon@revolve.team>"]

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.20.26"
click = "^8.1.3"
awswrangler = "^3.7.3"
tqdm = "^4.66.4"
slack-sdk = "^3.36.0"

[tool.poetry.group.agent.dependencies]
strands-agents = "^1.9.0"
strands-agents-tools = "^0.2.8"
strands-agents-builder = "^0.1.10"
mcp = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatbot = "chatbot.main_agent:command_line_chatbot"
